Ensure the button is never too small
This can happen if it's the only widget in a given area

--- a/MMM-MyQ.css
+++ b/MMM-MyQ.css
@@ -1,3 +1,7 @@
+.MMM-MyQ {
+    min-width: 150px;
+}
+
 .MMM-MyQ .control {
     background: transparent;
     border: 1px solid #6c757d;
